# selectrolyte

./: .gitignore  README.md  network.py  open3d_ex.py  pyproject.toml  requirements.txt  solve.py  study.py  study_best_ratio_over_pore_sizes.py  study_err_over_ratio.py  study_err_over_ratio_best_ratio.py  study_over_porenumbers.py  study_over_ratio.py  vis_pyvista.py  vis_voxels.py  visualization.py
converter/: V_to_distr.py  pore_multi_dv_dlog_converter.py
data/: .gitignore  conductivity_data.csv  data.json  pore_V_data.csv  pore_distr_data.csv  pore_dv_data.csv  pore_dv_dlog_data.csv  wpd_project_conductivity.json  wpd_project_pore_size.json
data/networks/: eq_0.54.json  rand_0.54.json  random_0.54.json
data/poresizes/comulative_pore_volume/: O1_50.csv  O2_40.csv  O4_40.csv
data/poresizes/dv_dlog/: O1_50.csv  O2_40.csv  O4_40.csv
data/studies/: best_ratio_over_poresizes.json  err_over_ratio.json
literature/: conductivities.tar  wpd_project_pore_size.tar
networks/: config.py  helpers.py  network.py  partsim.py  randnet.py
networks/archive/: partsim.py  partsim2.py
networks/distribution/: distribution_file.py  idistribution.py
networks/generators/: config.py  generator.py
networks/generators/conns/: config.py  (+4 more)
parsers/: pore_V_parser.py  pore_dv_parser.py
visualization/: diameter_distribution.py  diameter_distribution_exp.py  gas_absorption.py  network.py  network_vis.py  plot_err_over_poresizes.py  plot_err_over_ratio.py  points.py  pore_distribution.py  study_err_over_poresizes.py  study_err_over_ratio.py  vis_pyvista.py  visualization.py
(+8 files in other folders)
