[project]
name = "selectrolyte"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Willi Zschiebsch", email = "willi.zschiebsch@gmail.com"},
]
dependencies = [
    "numpy>=1.26.2",
    "openpnm>=3.4.0",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
package-type = "application"
